--- a/style.css
+++ b/style.css
@@ -1,34 +1,126 @@
-#app {
-    width: 100%;
-    height: 800px;
-    background-color: aliceblue;
+.line {
+    height: 6px;
+    background-color: black;
+    width: 100px;
+    margin: 8px auto;
+    text-align: left;
 }
 
-.container
-{
+body {
     text-align: center;
+
+    background-repeat: no-repeat;
 }
 
-#myCarousel { 
-    background-color: red;
+img {
 
-
+    width: 200px;
 }
 
 
-#myCarousel img {
-    height: 300px; margin-top: 35px;
-}
-.carousel-inner p {
-    margin-bottom: 15px;
-    margin-top: 15px; color : white; 
-    font-size: 20px;
-}
-#myCarousel2 { 
-    background-color: #b5d0d4;
+
+#pg1 {
+    position: absolute;
+    overflow: hidden;
+    height: 800px;
+    color: black;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    opacity: 0.83;
+    display: table;
+    width: 100%;
+    height: 100%;
+    text-align: left;
 }
 
-#myCarousel2 img {
-    height: 300px;
-    margin-top: 35px;
+
+pre {
+    font-size: 30px;
+}
+
+
+
+
+.links {
+    float: left;
+    color: black padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 9px;
+    padding-right: 9px;
+    font-family: 'Courgette', cursive;
+    font-size: 30px;
+}
+
+
+
+.menu {
+
+    list-style: none;
+    font-family: 'Courgette', cursive;
+    position: fixed;
+    top: 10px;
+    right: 30px;
+    z-index: 10;
+    cursor: pointer;
+    background-color: white;
+    color: black;
+}
+
+
+.links:hover {
+    background-color: bisque;
+}
+
+html {
+    scroll-behavior: smooth;
+
+}
+
+a {
+    text-decoration: none;
+
+}
+
+#pg1 {
+    background: linear-gradient(#e8337e 0%, #ed0c1b 100%);
+    background-repeat: no-repeat;
+}
+
+#pg2 {
+    background: linear-gradient(#11ed8a 0%, #11ed1f 100%);
+    background-repeat: no-repeat;
+}
+
+
+#videos {
+    background: linear-gradient(#ff4000 0%, #ff8400 100%);
+    background-repeat: no-repeat;
+}
+
+
+#images {
+    background: linear-gradient(#e3cd27 0%, #ff8400 100%);
+    background-repeat: no-repeat;
+}
+
+
+#author {
+    background: linear-gradient(#9900ff 0%, #c312de 100%);
+    background-repeat: no-repeat;
+}
+
+#movie {
+    background: linear-gradient(#db02be 0%, #db027a 100%);
+    background-repeat: no-repeat;
+}
+
+
+#contact {
+    
+background: linear-gradient(#ff0000 0%, #ff8000 100%);    
+    
+    
+    
 }
